[package]
name = "ttt-io-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
ttt-io-sys = { git = "https://github.com/hwoy/ttt-io-sys.git" }

[features]
default = ["builtin_table"]
builtin_table = []
